--- a/slider2.html
+++ b/slider2.html
@@ -19,8 +19,15 @@
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
     <!-- Link fontawesome CSS -->
-
     <link href="./src/css/all.min.css" rel="stylesheet" />
+
+    <!-- Link bootsrap CSS -->
+    <!-- <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    /> -->
   </head>
   <body>
     <section class="space-section">
@@ -1022,6 +1029,46 @@
       <button class="view-all">مشاهده همه</button>
     </section>
 
+    <section class="tab-navigation">
+      <div class="tab-navigation__tabs">
+        <a href="#" class="tab-navigation__tab-link">
+          <button class="tab-navigation__tab-btn selected">دسته بندی یک</button>
+        </a>
+        <a href="#" class="tab-navigation__tab-link">
+          <button class="tab-navigation__tab-btn">دسته بندی دو</button>
+        </a>
+        <a href="#" class="tab-navigation__tab-link">
+          <button class="tab-navigation__tab-btn">دسته بندی سه</button>
+        </a>
+        <a href="#" class="tab-navigation__tab-link">
+          <button class="tab-navigation__tab-btn">دسته بندی چهار</button>
+        </a>
+      </div>
+
+      <div class="tab-navigation__content" id="cotegory-1">
+        <p>
+          ویرایش و بازخوانی متون فارسی یا به زبان ساده‌تر ویرایش فنی متن‌های
+          فارسی از نظر علائم نگارشی، نکات دستوری و جمله‌بندی، یکی از مهم‌ترین
+          مسائلی است که بیشتر ...
+        </p>
+      </div>
+
+      <div class="tab-navigation__content" id="cotegory-2">
+        <p>
+        </p>
+      </div>
+
+      <div class="tab-navigation__content" id="cotegory-3">
+        <p>
+        </p>
+      </div>
+
+      <div class="tab-navigation__content" id="cotegory-4">
+        <p>
+        </p>
+      </div>
+    </section>
+
     <script
       src="https://code.jquery.com/jquery-2.2.4.min.js"
       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
@@ -1033,8 +1080,20 @@
 
     <!-- fontawesome JS -->
     <script defer src="./src/js/all.min.js"></script>
-    
+
     <!--load all styles -->
     <script src="./src/js/slider2.js"></script>
+
+    <!--Bootstrap JS -->
+    <!-- <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"
+    ></script> -->
   </body>
 </html>
