--- a/slider2.html
+++ b/slider2.html
@@ -1069,6 +1069,24 @@
       </div>
     </section>
 
+    <section class="best-categorie-icon">
+      <div class="icon-box">
+        <i class="fas fa-home icon-category"></i>
+      </div>
+      <div class="icon-box">
+        <i class="fas fa-home icon-category"></i>
+      </div>
+      <div class="icon-box">
+        <i class="fas fa-home icon-category"></i>
+      </div>
+      <div class="icon-box">
+        <i class="fas fa-home icon-category"></i>
+      </div>
+      <div class="icon-box">
+        <i class="fas fa-home icon-category"></i>
+      </div>
+    </section>
+
     <script
       src="https://code.jquery.com/jquery-2.2.4.min.js"
       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
