--- a/slider2.html
+++ b/slider2.html
@@ -30,6 +30,63 @@
     /> -->
   </head>
   <body>
+    <section class="banner-box-section">
+      <div class="banner-content">
+        <div class="grid-boxes-section">
+          <div class="single-box">
+            <p class="box-title">گروه1</p>
+          </div>
+          <div class="single-box">
+            <p class="box-title">گروه 2</p>
+          </div>
+          <div class="single-box">
+            <p class="box-title">گروه3</p>
+          </div>
+          <div class="single-box">
+            <p class="box-title">گروه4</p>
+          </div>
+          <div class="single-box">
+            <p class="box-title">گروه 5</p>
+          </div>
+          <div class="single-box">
+            <p class="box-title">گروه 6</p>
+          </div>
+          <div class="single-box">
+            <p class="box-title">گروه7</p>
+          </div>
+          <div class="single-box">
+            <p class="box-title">گروه 8</p>
+          </div>
+          <div class="single-box">
+            <p class="box-title">گروه 9</p>
+          </div>
+          <div class="single-box">
+            <p class="box-title">گروه 10</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="best-categorie-icon">
+      <div class="icon-box-parent">
+        <div class="icon-box">
+          <i class="fas fa-home icon-category"></i>
+        </div>
+        <div class="icon-box">
+          <i class="fas fa-home icon-category"></i>
+        </div>
+        <div class="icon-box">
+          <i class="fas fa-home icon-category"></i>
+        </div>
+        <div class="icon-box">
+          <i class="fas fa-home icon-category"></i>
+        </div>
+        <div class="icon-box">
+          <i class="fas fa-home icon-category"></i>
+        </div>
+      </div>
+    </section>
+
     <section class="space-section">
       <h3 class="space-section-title">برندهای معتبر</h3>
     </section>
@@ -1054,37 +1111,40 @@
       </div>
 
       <div class="tab-navigation__content" id="cotegory-2">
-        <p>
-        </p>
+        <p></p>
       </div>
 
       <div class="tab-navigation__content" id="cotegory-3">
-        <p>
-        </p>
+        <p></p>
       </div>
 
       <div class="tab-navigation__content" id="cotegory-4">
-        <p>
-        </p>
+        <p></p>
       </div>
     </section>
 
-    <section class="best-categorie-icon">
-      <div class="icon-box">
-        <i class="fas fa-home icon-category"></i>
+    <section class="dropdown-section">
+      <div class="dropdown-section__button-box">
+        <button class="dropdown-section-button">همه</button>
+        <i class="fa fa-angle-down"></i>
       </div>
-      <div class="icon-box">
-        <i class="fas fa-home icon-category"></i>
-      </div>
-      <div class="icon-box">
-        <i class="fas fa-home icon-category"></i>
-      </div>
-      <div class="icon-box">
-        <i class="fas fa-home icon-category"></i>
-      </div>
-      <div class="icon-box">
-        <i class="fas fa-home icon-category"></i>
-      </div>
+      <ul class="dropdown-section__list">
+        <li class="dropdown-section__list-item">
+          <a href="#" class="dropdown-section__list-item-link"> 1گروه </a>
+        </li>
+        <li class="dropdown-section__list-item">
+          <a href="#" class="dropdown-section__list-item-link"> 2گروه </a>
+        </li>
+        <li class="dropdown-section__list-item">
+          <a href="#" class="dropdown-section__list-item-link"> 3گروه </a>
+        </li>
+        <li class="dropdown-section__list-item">
+          <a href="#" class="dropdown-section__list-item-link"> 4گروه </a>
+        </li>
+        <li class="dropdown-section__list-item">
+          <a href="#" class="dropdown-section__list-item-link"> 5گروه </a>
+        </li>
+      </ul>
     </section>
 
     <script
