change banner section

--- a/slider2.html
+++ b/slider2.html
@@ -30,42 +30,42 @@
     /> -->
   </head>
   <body>
-    <section class="banner-box-section">
-      <div class="banner-content">
-        <div class="grid-boxes-section">
-          <div class="single-box">
-            <p class="box-title">گروه1</p>
-          </div>
-          <div class="single-box">
-            <p class="box-title">گروه 2</p>
-          </div>
-          <div class="single-box">
-            <p class="box-title">گروه3</p>
-          </div>
-          <div class="single-box">
-            <p class="box-title">گروه4</p>
-          </div>
-          <div class="single-box">
-            <p class="box-title">گروه 5</p>
-          </div>
-          <div class="single-box">
-            <p class="box-title">گروه 6</p>
-          </div>
-          <div class="single-box">
-            <p class="box-title">گروه7</p>
-          </div>
-          <div class="single-box">
-            <p class="box-title">گروه 8</p>
-          </div>
-          <div class="single-box">
-            <p class="box-title">گروه 9</p>
-          </div>
-          <div class="single-box">
-            <p class="box-title">گروه 10</p>
-          </div>
+    <!-- <section class="banner-box-section">
+    </section> -->
+    <div class="banner-content">
+      <div class="grid-boxes-section">
+        <div class="single-box">
+          <p class="box-title">گروه1</p>
+        </div>
+        <div class="single-box">
+          <p class="box-title">گروه 2</p>
+        </div>
+        <div class="single-box">
+          <p class="box-title">گروه3</p>
+        </div>
+        <div class="single-box">
+          <p class="box-title">گروه4</p>
+        </div>
+        <div class="single-box">
+          <p class="box-title">گروه 5</p>
+        </div>
+        <div class="single-box">
+          <p class="box-title">گروه 6</p>
+        </div>
+        <div class="single-box">
+          <p class="box-title">گروه7</p>
+        </div>
+        <div class="single-box">
+          <p class="box-title">گروه 8</p>
+        </div>
+        <div class="single-box">
+          <p class="box-title">گروه 9</p>
+        </div>
+        <div class="single-box">
+          <p class="box-title">گروه 10</p>
         </div>
       </div>
-    </section>
+    </div>
 
     <section class="best-categorie-icon">
       <div class="icon-box-parent">
