costomizied banner section & fixed dropdown

--- a/slider2.html
+++ b/slider2.html
@@ -30,9 +30,11 @@
     /> -->
   </head>
   <body>
-    <!-- <section class="banner-box-section">
-    </section> -->
-    <div class="banner-content">
+    <section class="space-section">
+      <h3 class="space-section-title">برندهای معتبر</h3>
+    </section>
+
+    <section class="banner-content">
       <div class="grid-boxes-section">
         <div class="single-box">
           <p class="box-title">گروه1</p>
@@ -65,7 +67,7 @@
           <p class="box-title">گروه 10</p>
         </div>
       </div>
-    </div>
+    </section>
 
     <section class="best-categorie-icon">
       <div class="icon-box-parent">
@@ -85,10 +87,6 @@
           <i class="fas fa-home icon-category"></i>
         </div>
       </div>
-    </section>
-
-    <section class="space-section">
-      <h3 class="space-section-title">برندهای معتبر</h3>
     </section>
 
     <section class="dolatsara-slider-section">
@@ -818,6 +816,32 @@
       <h3 class="space-section-title">جهان ساختمان</h3>
     </section>
 
+    <section class="dropdown-section">
+      <div class="dropdown-section__parent">
+        <div class="dropdown-section__button-box">
+          <button class="dropdown-section-button">همه</button>
+          <i class="fa fa-angle-down"></i>
+        </div>
+        <ul class="dropdown-section__list">
+          <a href="#" class="dropdown-section__list-item-link">
+            <li class="dropdown-section__list-item">1گروه</li>
+          </a>
+          <a href="#" class="dropdown-section__list-item-link">
+            <li class="dropdown-section__list-item">2گروه</li>
+          </a>
+          <a href="#" class="dropdown-section__list-item-link">
+            <li class="dropdown-section__list-item">3گروه</li>
+          </a>
+          <a href="#" class="dropdown-section__list-item-link">
+            <li class="dropdown-section__list-item">4گروه</li>
+          </a>
+          <a href="#" class="dropdown-section__list-item-link">
+            <li class="dropdown-section__list-item">5گروه</li>
+          </a>
+        </ul>
+      </div>
+    </section>
+
     <section class="album-slider">
       <div class="dolatsara-slider">
         <div class="swiper mySwiper4">
@@ -1121,30 +1145,6 @@
       <div class="tab-navigation__content" id="cotegory-4">
         <p></p>
       </div>
-    </section>
-
-    <section class="dropdown-section">
-      <div class="dropdown-section__button-box">
-        <button class="dropdown-section-button">همه</button>
-        <i class="fa fa-angle-down"></i>
-      </div>
-      <ul class="dropdown-section__list">
-        <li class="dropdown-section__list-item">
-          <a href="#" class="dropdown-section__list-item-link"> 1گروه </a>
-        </li>
-        <li class="dropdown-section__list-item">
-          <a href="#" class="dropdown-section__list-item-link"> 2گروه </a>
-        </li>
-        <li class="dropdown-section__list-item">
-          <a href="#" class="dropdown-section__list-item-link"> 3گروه </a>
-        </li>
-        <li class="dropdown-section__list-item">
-          <a href="#" class="dropdown-section__list-item-link"> 4گروه </a>
-        </li>
-        <li class="dropdown-section__list-item">
-          <a href="#" class="dropdown-section__list-item-link"> 5گروه </a>
-        </li>
-      </ul>
     </section>
 
     <script
