--- a/slider2.html
+++ b/slider2.html
@@ -276,6 +276,10 @@
 
       <button class="view-all">مشاهده همه</button>
     </section>
+    
+    <section class="space-section">
+      <h3 class="space-section-title">جهان ساختمان</h3>
+    </section>
 
     <section class="several-row-slider">
       <h2 class="several-row-slider__title">پربازدیدترین آگهی ها</h2>
