--- a/dolatsara.html
+++ b/dolatsara.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>dolatsara</title>
   <link rel="stylesheet" href="./src/css/reset.css" />
-  <link rel="stylesheet" href="./src/css/slider2.css" />
+  <link rel="stylesheet" href="./src/css/dolatsara.css" />
   <link rel="stylesheet" href="./src/css/common.css" />
 
   <!-- medias -->
-  <link rel="stylesheet" href="./src/css/mediaSlider2.css" />
+  <link rel="stylesheet" href="./src/css/mediaDolatsara.css" />
   <link rel="stylesheet" href="./src/css/mediaCommon.css" />
 
   <!-- Link Swiper's CSS -->
@@ -1049,7 +1049,7 @@
   <script defer src="./src/js/all.min.js"></script>
 
   <!--load all styles -->
-  <script src="./src/js/slider2.js"></script>
+  <script src="./src/js/dolatsara.js"></script>
 
   <!--Bootstrap JS -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
