--- a/dolatsara.html
+++ b/dolatsara.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>dolatsara</title>
+
+  <!-- Link bootsrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+
   <link rel="stylesheet" href="./src/css/reset.css" />
   <link rel="stylesheet" href="./src/css/dolatsara.css" />
   <link rel="stylesheet" href="./src/css/common.css" />
@@ -14,22 +19,138 @@
   <link rel="stylesheet" href="./src/css/mediaDolatsara.css" />
   <link rel="stylesheet" href="./src/css/mediaCommon.css" />
 
+  <link rel="stylesheet" href="./src/css/themify-icons.css" />
+
   <!-- Link Swiper's CSS -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <!-- Link fontawesome CSS -->
   <link href="./src/css/all.min.css" rel="stylesheet" />
 
-  <!-- Link bootsrap CSS -->
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" /> -->
-
 </head>
 
 <body>
-  <section class="space-section">
-    <h3 class="space-section-title">برندهای معتبر</h3>
+  <section class="dolatsara__main-header">
+    <div class="dolatsara__all-menu">
+      <nav class="navbar navbar-expand-lg dolatsara__right-menu">
+        <button class="navbar-toggler dolatsara__toggle-button" type="button" data-bs-toggle="collapse"
+          data-bs-target="#dolatsara__menu-list">
+          <!-- <span class="navbar-toggler-icon"> -->
+          <!-- <span className="menu navbar-toggler-icon"> -->
+          <!-- <div className="menu-line menu-line-1"></div>
+            <div className="menu-line menu-line-2"></div>
+            <div className="menu-line menu-line-3"></div>
+          </span> -->
+          <!-- </span> -->
+
+          <span class="menu navbar-toggler-icon ti-menu"></span>
+
+        </button>
+        <div class="collapse navbar-collapse" id="dolatsara__menu-list">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item dolatsara__menu-item">
+              <a class="nav-link" href="#">کل آگهی ها</a>
+            </li>
+            <li class="nav-item dolatsara__menu-item">
+              <a class="nav-link" href="#">ثبت آگهی فروش</a>
+            </li>
+            <li class="nav-item dolatsara__menu-item">
+              <a class="nav-link" href="#">ثبت درخواست خرید</a>
+            </li>
+            <li class="nav-item dolatsara__menu-item">
+              <a class="nav-link" href="#">مجله دولتسرا</a>
+            </li>
+            <li class="nav-item dolatsara__menu-item">
+              <a class="nav-link" href="#">لیست کسب و کارها</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="dolatsara__left-menu">
+        <a href="tel:02122254171" class="dolatsara__phone">
+          <strong>22254171</strong>
+          <small>-021</small>
+        </a>
+        <button type="button" class="dolatsara__setting-button">
+          <i class="fa fa-cog"></i>
+        </button>
+      </div>
+    </div>
+
+    <div class="dolatsara__main-content">
+      <div class="image-placeholder">
+        <img src="./src/images/logo.png" alt="dolatsara" />
+      </div>
+
+      <h2 class="dolatsara__title-placeholder-title">دولت سرا، موتور جستجوی صنعت ساختمان
+      </h2>
+      <div class="dolatsara__search-title-head">
+
+        <div class="dolatsar__seacrh-tabs">
+          <a class="dolatsara__tabs-link" href="https://www.dolatsara.com/supplier/filter">
+            املاک
+          </a>
+          <a class="dolatsara__tabs-link" href="https://www.dolatsara.com/supplier/filter">
+            پیمانکاران
+          </a>
+          <a class="dolatsara__tabs-link" href="https://www.dolatsara.com/supplier/filter">
+            مصالح
+          </a>
+          <a class="dolatsara__tabs-link" href="https://www.dolatsara.com/supplier/filter">
+            تاسیسات
+          </a>
+          <a class="dolatsara__tabs-link" href="https://www.dolatsara.com/supplier/filter">
+            فولاد
+          </a>
+          <a class="dolatsara__tabs-link" href="https://www.dolatsara.com/supplier/filter">
+            آسانسور
+          </a>
+          <a class="dolatsara__tabs-link" href="https://www.dolatsara.com/supplier/filter">
+            دکوراسیون
+          </a>
+        </div>
+        <div class="dolatsara__forms-box">
+          <form>
+            <input type="text" class="dolatsara__search-input" placeholder="جستجو در میان صد ها هزار آگهی صنعت ساختمان">
+            <button class="dolatsara__search-button">
+              <i class="fa fa-search search-icon"></i>
+            </button>
+          </form>
+          <form action="#">
+            <button class="dolatsara__instant-ads-button">آگهی های فوری</button>
+          </form>
+
+        </div>
+      </div>
+
+    </div>
+
+    <div class="dolatsara__box-icons">
+      <a href="#" class="dolatsara__icon-placehlder">
+        <i class="fa fa-home"></i>
+      </a>
+      <a href="#" class="dolatsara__icon-placehlder">
+        <i class="fa fa-home"></i>
+      </a>
+      <a href="#" class="dolatsara__icon-placehlder">
+        <i class="fa fa-home"></i>
+      </a>
+      <a href="#" class="dolatsara__icon-placehlder">
+        <i class="fa fa-home"></i>
+      </a>
+      <a href="#" class="dolatsara__icon-placehlder">
+        <i class="fa fa-home"></i>
+      </a>
+      <a href="#" class="dolatsara__icon-placehlder">
+        <i class="fa fa-home"></i>
+      </a>
+      <a href="#" class="dolatsara__icon-placehlder">
+        <i class="fa fa-home"></i>
+      </a>
+    </div>
   </section>
 
+  <!-- 
   <section class="banner-content">
     <div class="grid-boxes-section">
       <div class="single-box">
@@ -63,7 +184,7 @@
         <p class="box-title">گروه 10</p>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="best-categorie-icon">
     <div class="icon-box-parent">
@@ -1052,12 +1173,12 @@
   <script src="./src/js/dolatsara.js"></script>
 
   <!--Bootstrap JS -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-    crossorigin="anonymous"></script> -->
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
