search city done

--- a/dolatsara.html
+++ b/dolatsara.html
@@ -72,7 +72,6 @@
       </nav>
   
       <div class="dolatsara__left-menu">
-  
         <button class="dolatsara__city-button" data-bs-toggle="modal" data-bs-target="#city-modal">
           3شهر
           <i class="material-icons">location_on</i>
@@ -88,9 +87,9 @@
               <form class="dolatsara__city-modal-form">
                 <div class="modal-body">
                   <i class="fa fa-search search-icon"></i>
-                  <input type="text" class="dolatsara__search-city" placeholder="جستجو در شهرها">
+                  <input type="text" class="dolatsara__search-city" placeholder="جستجو در شهرها"  id="search-city">
   
-                  <ul class="dolatsara__city-list">
+                  <ul class="dolatsara__city-list" id="dolatsara__city-list">
                     <li class="dolatsara__city-list-item">
                       <label for="tehran" class="">
                         تهران
@@ -202,8 +201,8 @@
         </div>
       </div>
     </div>
-
   </header>
+
   <section class="dolatsara__main-header">
     <div class="dolatsara__main-content">
       <div class="image-placeholder">
