--- a/dolatsara.html
+++ b/dolatsara.html
@@ -206,7 +206,7 @@
   <section class="dolatsara__main-header">
     <div class="dolatsara__main-content">
       <div class="image-placeholder">
-        <img src="./src/images/logo.png" alt="dolatsara" />
+        <img src="./src/images/Layer 1.png" alt="dolatsara" />
       </div>
 
       <h2 class="dolatsara__title-placeholder-title">دولت سرا، موتور جستجوی صنعت ساختمان
@@ -254,25 +254,28 @@
 
     <div class="dolatsara__box-icons">
       <a href="#" class="dolatsara__icon-placehlder">
-        <i class="fa fa-home"></i>
+        <img src="./src/images/Layer 31.png" alt="dolatsara">
       </a>
       <a href="#" class="dolatsara__icon-placehlder">
-        <i class="fa fa-home"></i>
+        <img src="./src/images/Layer 33.png" alt="dolatsara">
       </a>
       <a href="#" class="dolatsara__icon-placehlder">
-        <i class="fa fa-home"></i>
+        <img src="./src/images/Layer 34.png" alt="dolatsara">
       </a>
       <a href="#" class="dolatsara__icon-placehlder">
-        <i class="fa fa-home"></i>
+        <img src="./src/images/Layer 35.png" alt="dolatsara">
       </a>
       <a href="#" class="dolatsara__icon-placehlder">
-        <i class="fa fa-home"></i>
+        <img src="./src/images/Layer 32.png" alt="dolatsara">
       </a>
       <a href="#" class="dolatsara__icon-placehlder">
-        <i class="fa fa-home"></i>
+        <img src="./src/images/Layer 29.png" alt="dolatsara">
       </a>
       <a href="#" class="dolatsara__icon-placehlder">
-        <i class="fa fa-home"></i>
+        <img src="./src/images/Layer 36.png" alt="dolatsara">
+      </a>
+      <a href="#" class="dolatsara__icon-placehlder">
+        <img src="./src/images/Layer 30.png" alt="dolatsara">
       </a>
     </div>
   </section>
