--- a/dolatsara.html
+++ b/dolatsara.html
@@ -143,7 +143,7 @@
         </a>
         <div class="dropdown dolatsara__setting-list">
           <button type="button" class="dolatsara__setting-button" data-bs-toggle="dropdown">
-            <i class="fa fa-cog"></i>
+            <img src="./src/images/Layer 1.png" alt="dolatsara__setting"/>
           </button>
           <ul class="dropdown-menu dolatsara__setting-list-icons">
             <div class="row">
@@ -206,7 +206,7 @@
   <section class="dolatsara__main-header">
     <div class="dolatsara__main-content">
       <div class="image-placeholder">
-        <img src="./src/images/Layer 1.png" alt="dolatsara" />
+        <img src="./src/images/Logo2.png" alt="dolatsara" />
       </div>
 
       <h2 class="dolatsara__title-placeholder-title">دولت سرا، موتور جستجوی صنعت ساختمان
