submit search form

--- a/dolatsara.html
+++ b/dolatsara.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="dolatsara__cancel-button" data-bs-dismiss="modal">انصراف</button>
-                  <button type="button" class="dolatsara__confirm-button">تایید</button>
+                  <button class="dolatsara__confirm-button">تایید</button>
                 </div>
               </form>
             </div>
