image setting list added

--- a/dolatsara.html
+++ b/dolatsara.html
@@ -149,7 +149,7 @@
             <div class="row">
               <li>
                 <a class="dropdown-item" href="#">
-                  <i class="fa fa-address-card"></i>
+                  <img src="./src/images/Layer 32.png">
                   آیکون 1
                 </a>
               </li>
