modal bug fixed

--- a/dolatsara.html
+++ b/dolatsara.html
@@ -1317,7 +1317,7 @@
   <!--select2 JS -->
   <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
-  <script>
+  <!-- <script>
 
     let form = document.querySelector("form.dolatsara__city-modal-form");
     let searchCityInput = document.getElementById("search-city");
@@ -1342,7 +1342,7 @@
         }
       }
     }
-  </script>
+  </script> -->
 </body>
 
 </html>
