--- a/dolatsara.html
+++ b/dolatsara.html
@@ -47,6 +47,9 @@
         <div class="collapse navbar-collapse" id="dolatsara__menu-list">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 dolatsara__menu">
             <li class="nav-item dolatsara__menu-item">
+              <a class="nav-link" href="#">خانه</a>
+            </li>
+            <li class="nav-item dolatsara__menu-item">
               <a class="nav-link" href="#">کل آگهی ها</a>
             </li>
             <li class="nav-item dolatsara__menu-item">
