--- a/dolatsara.html
+++ b/dolatsara.html
@@ -7,12 +7,7 @@
     <title>dolatsara</title>
 
     <!-- Link bootsrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/dolatsara.css" />
@@ -27,23 +22,15 @@
     <link rel="stylesheet" href="./src/css/themify-icons.css" />
 
     <!-- Link Swiper's CSS -->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/swiper/swiper-bundle.min.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
 
     <!-- Link fontawesome CSS -->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link href="./src/css/all.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link href="./src/css/all.min.css" rel="stylesheet" /> -->
+</head>
 
-    <!-- Link select2 CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
-      rel="stylesheet"
-    />
   </head>
 
   <body>
@@ -90,7 +77,8 @@
                   data-bs-toggle="dropdown"
                 >
                   مجله دولتسرا
-                  <i class="fa fa-angle-down"></i>
+                  <!-- <i class="fal fa-angle-down"></i> -->
+                  <i class="material-icons">&#xe313;</i>
                 </a>
                 <ul class="dropdown-menu dolatsara__sub-menu">
                   <li class="dolatsara__sub-menu-item">
@@ -362,7 +350,8 @@
                 placeholder="جستجو در میان صد ها هزار آگهی صنعت ساختمان"
               />
               <button class="dolatsara__search-button">
-                <i class="fa fa-search search-icon"></i>
+                <!-- <i class="fa fa-search search-icon"></i> -->
+                <i class='fa fa-search'></i>
               </button>
             </form>
             <form action="#">
@@ -1534,7 +1523,7 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <!-- fontawesome JS -->
-    <script defer src="./src/js/all.min.js"></script>
+    <!-- <script defer src="./src/js/all.min.js"></script> -->
 
     <!--load all styles -->
     <script src="./src/js/dolatsara.js"></script>
@@ -1551,34 +1540,5 @@
       crossorigin="anonymous"
     ></script>
 
-    <!--select2 JS -->
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-
-    <!-- <script>
-
-    let form = document.querySelector("form.dolatsara__city-modal-form");
-    let searchCityInput = document.getElementById("search-city");
-    let cityInput = document.querySelectorAll("input.city-name");
-
-    function searchCity() {
-      let txtValue;
-      let ul = document.getElementById("dolatsara__city-list");
-      let li = ul.getElementsByTagName("li");
-      let filter = searchCityInput.value;
-
-      for (let i = 0; i < li.length; i++) {
-        let label = li[i].getElementsByTagName("label")[0];
-        console.log('label', label)
-
-        txtValue = label.textContent || label.innerText;
-
-        if (txtValue.indexOf(filter) > -1) {
-          li[i].style.display = "block";
-        } else {
-          li[i].style.display = "none";
-        }
-      }
-    }
-  </script> -->
   </body>
 </html>
