tag added in  search modal

--- a/dolatsara.html
+++ b/dolatsara.html
@@ -114,9 +114,10 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title">انتخاب شهر</h5>
-                  <span class="dolatsara__selected-city"
-                    >حداقل یک شهر را انتخاب کنید.</span
-                  >
+                  <span class="dolatsara__selected-city">حداقل یک شهر را انتخاب کنید.</span>
+                  <div class="dolatsara__city-name-parent">
+
+                  </div>
                 </div>
                 <form class="dolatsara__city-modal-form">
                   <div class="modal-body">
@@ -131,72 +132,72 @@
 
                     <ul class="dolatsara__city-list" id="dolatsara__city-list">
                       <li class="dolatsara__city-list-item">
-                        <label for="tehran" class="">
+                        <label for="تهران" class="">
                           تهران
                           <input
                             type="checkbox"
                             name="city-name"
-                            id="tehran"
+                            id="تهران"
                             class="city-name"
                             value="تهران"
                           />
                         </label>
                       </li>
                       <li class="dolatsara__city-list-item">
-                        <label for="arak" class="">
+                        <label for="اراک" class="">
                           اراک
                           <input
                             type="checkbox"
                             name="city-name"
-                            id="arak"
+                            id="اراک"
                             class="city-name"
                             value="اراک"
                           />
                         </label>
                       </li>
                       <li class="dolatsara__city-list-item">
-                        <label for="shiraz" class="">
+                        <label for="شیراز" class="">
                           شیراز
                           <input
                             type="checkbox"
                             name="city-name"
-                            id="shiraz"
+                            id="شیراز"
                             class="city-name"
                             value="شیراز"
                           />
                         </label>
                       </li>
                       <li class="dolatsara__city-list-item">
-                        <label for="sari" class="">
+                        <label for="ساری" class="">
                           ساری
                           <input
                             type="checkbox"
                             name="city-name"
-                            id="sari"
+                            id="ساری"
                             class="city-name"
                             value="ساری"
                           />
                         </label>
                       </li>
                       <li class="dolatsara__city-list-item">
-                        <label for="mashhad" class="">
+                        <label for="مشهد" class="">
                           مشهد
                           <input
                             type="checkbox"
                             name="city-name"
-                            id="mashhad"
+                            id="مشهد"
                             class="city-name"
                             value="مشهد"
                           />
                         </label>
                       </li>
                       <li class="dolatsara__city-list-item">
-                        <label for="yazd" class="">
+                        <label for="یزد" class="">
                           یزد
                           <input
                             type="checkbox"
                             name="city-name"
-                            id="yazd"
+                            id="یزد"
                             class="city-name"
                             value="یزد"
                           />
