--- a/dolatsara.html
+++ b/dolatsara.html
@@ -51,7 +51,7 @@
               <img
                 class="logo-img"
                 alt="dolatsara"
-                src="./src/images/menuLogo.png"
+                src="./src/images/Logo3.jpg"
               />
             </a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 dolatsara__menu">
@@ -289,7 +289,7 @@
       </div>
     </header>
 
-    <section class="dolatsara__main-header">
+    <section class="dolatsara__main-header" style="background-image: url('./src/images/03.png')">
       <div class="dolatsara__main-content">
         <div class="image-placeholder">
           <img src="./src/images/Logo2.png" alt="dolatsara" />
